# fhat

./: .gitignore  README  README.markdown  class_closure.sh  configure.ac  fhat.sh  indexes.sql  reverse_transitive_closure.sql  schema.sql  transitive_closure.schema.sql  transitive_closure.sql
src/: Makefile.am  closure  closure.cc  dfs.cc  dominate.cc  fhat.cc  pack.cc  parse.cc  retain.cc  sort.cc  sortcolumns.cc  translate.cc  unpack.cc  util.h  zipfiles.cc
