AM_CXXFLAGS = -std=c++0x -Wall -O0 -g

bin_PROGRAMS = parse sort sortcolumns translate dfs dominate retain
parse_SOURCES = parse.cc
sort_SOURCES = sort.cc
sortcolumns_SOURCES = sortcolumns.cc
translate_SOURCES = translate.cc
dfs_SOURCES = dfs.cc
dominate_SOURCES = dominate.cc
retain_SOURCES = retain.cc
